<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.baibeiyun.eazyfair.activity.supplier.mygoods.SendGoodsDataActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/title_bar_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/goods_zlfs"
                android:textColor="@color/color_white"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/fanhui_rl"
            android:layout_width="45dp"
            android:layout_height="50dp">
            <!--返回-->
            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/fanhui_icon" />
        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:layout_marginTop="13dp"
        android:text="@string/send_fs" />

    <RadioGroup
        android:id="@+id/send_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <RadioButton
            android:id="@+id/email_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:button="@null"
            android:drawableLeft="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:text="@string/email_fs"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/bluetooth_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:text="@string/bluetooth_fs"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:layout_marginTop="13dp"
        android:text="@string/data_gs" />

    <RadioGroup
        android:id="@+id/document_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white">

        <RadioButton
            android:id="@+id/pdf_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:button="@null"
            android:drawableLeft="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:text="@string/pdf"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/excel_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/radiobutton_selector"
            android:padding="10dp"
            android:text="@string/excel"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </RadioGroup>

    <Button
        android:id="@+id/send_bt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/solid_blue"
        android:text="@string/send"
        android:textColor="@color/color_white"
        android:textSize="15sp" />
</LinearLayout>
