<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.business_opportunity.BusinessActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange_color">

        <RelativeLayout
            android:id="@+id/fanhui_rl"
            android:layout_width="45dp"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/fanhui_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/businessopportunity"
            android:textColor="@color/color_white"
            android:textSize="20sp" />


    </RelativeLayout>


    <Button
        android:id="@+id/goods_publish_bt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_gray_and_solid_white"
        android:text="@string/goods_fb"
        android:textColor="@color/orange_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/xuqiu_publish_bt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_gray_and_solid_white"
        android:text="@string/demand_fb"
        android:textColor="@color/orange_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/exhibition_info_bt"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_gray_and_solid_white"
        android:text="@string/exhibition"
        android:textColor="@color/orange_color"
        android:textSize="18sp" />
</LinearLayout>
